<resources>
    <string name="app_name">Minimum</string>
    <string name="dummy_article_title">5 Advanced Typescript Tips To Make You a Better Programmer</string>
    <string name="dummy_article_subtitle">Every programmer should know these tricks...</string>
    <string name="dummy_article_subtitle_full">Every programmer should know these tricks as soon as possible</string>
    <string name="dummy_article_author">Žygimantas Augūnas</string>
    <string name="dummy_article_date">2020 February 9</string>
    <string name="app_title">Minimum</string>
    <string name="dot_separator">·</string>
    <string name="no_results">No results\nPlease try again</string>
    <string name="dummy_article_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="dummy_written_by">WRITTEN BY</string>
    <string name="dummy_written_by_article">Žygimantas Augūnas</string>
    <string name="dummy_bio">Programmer | Terraria player | Valheim enjoyer | 90\'s music lover | Coffe lover</string>
    <string name="dummy_published_in">PUBLISHED IN</string>
    <string name="dummy_blog">Programmers heaven</string>
    <string name="dummy_bio_description">Something\'s funny</string>
    <string name="bookmark_title">Bookmarks</string>
    <string name="search_hint">Search articles</string>
    <string name="comments_title">Responses</string>
    <string name="dummy_commenter_name">Vardas Vardauskas</string>
    <string name="dummy_comment_content">Very interesting article indeed</string>
    <string name="dummy_comment_date">2020-12-01</string>
    <string name="no_comments">No comments yet\nYou can change that by adding one!</string>
    <string name="comment_label">Add comment</string>
    <string name="send">Send</string>
    <string name="commenter_name">Name</string>
    <string name="profile_title">Profile</string>
    <string name="personal_settings">Personal settings</string>
    <string name="show_daily_notifications">Show daily notifications</string>
    <string name="channel_name">Daily read notifications</string>
    <string name="channel_description">Your daily read reminder. You can always disable it in the settings</string>
    <!--     Aenean convallis nibh consectetur iaculis commodo. Donec quis orci scelerisque, venenatis massa et, varius mauris. Morbi ut nibh quis nibh euismod imperdiet at eu quam. Ut luctus neque risus. Etiam eu aliquet urna. Pellentesque eu odio non ligula faucibus tincidunt malesuada a est. Duis varius sapien sed ornare aliquam. Cras commodo ipsum augue, vitae auctor ligula vulputate eget. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam id faucibus justo. Praesent magna turpis, tincidunt ac consequat vel, vulputate id orci. Curabitur malesuada sem sem, eu dictum est iaculis a. In luctus non leo sit amet consectetur. Praesent vel libero blandit, auctor orci at, molestie leo. Maecenas purus metus, aliquet vel purus vitae, ultricies dignissim turpis. Donec imperdiet ac ante tristique tempus. Donec dolor leo, scelerisque non dictum vitae, scelerisque vel diam. Nam euismod diam id sapien congue, sit amet bibendum massa ullamcorper. Curabitur bibendum faucibus neque a rhoncus. Vestibulum ligula velit, mattis rhoncus massa ac, scelerisque congue mauris. Etiam placerat sem vitae sem fermentum tempus. Sed efficitur congue tellus, vitae consectetur nisi scelerisque ac. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean neque velit, semper quis quam non, gravida vestibulum orci. Fusce varius, eros vel consectetur ultricies, sapien tellus consequat enim, vitae aliquam nisl odio elementum enim. Duis nec ipsum id ex accumsan maximus. Mauris aliquet libero lorem, vel euismod metus pulvinar nec. In laoreet auctor nunc lobortis placerat. Donec ut dui vel nisl cursus pellentesque eu at leo. Phasellus non quam vitae elit tempor malesuada vitae vitae libero. Aliquam in velit vel mauris luctus mattis vel ut eros. Aenean pretium consequat risus, vel imperdiet dolor mollis nec. Ut faucibus risus sed sodales gravida. In vel consequat nulla. Aliquam at ante ut tellus aliquet tincidunt. Nulla nec commodo tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin bibendum pellentesque dapibus. Etiam condimentum, risus quis suscipit facilisis, ipsum felis auctor velit, vitae consectetur augue erat vitae tellus. In blandit pulvinar elit eu suscipit. Nunc tempus massa eget risus faucibus dictum. Cras posuere auctor sapien, eget auctor ligula venenatis bibendum. Vivamus tempus tincidunt ante, eu condimentum mauris mollis eget. Mauris faucibus arcu eget efficitur ultrices. Praesent euismod tellus ac felis accumsan tempor et at diam. Donec varius venenatis pharetra. Aliquam condimentum mi in ex vehicula convallis. Vestibulum lacus velit, eleifend at vehicula sit amet, pulvinar ut justo. Nullam lectus lorem, laoreet vel mattis eu, porta ac diam. Maecenas mattis, justo ac egestas tempus, lacus velit lacinia mauris, quis pharetra dolor sapien ut odio. Mauris aliquam libero orci, eu scelerisque neque fringilla eu. Quisque sollicitudin enim nec porta condimentum. Cras malesuada augue in ultricies placerat. Cras consequat nibh nec libero feugiat porttitor. Sed pharetra est nisi, nec cursus enim auctor sed. Nam ut lacus auctor arcu cursus euismod. Duis nunc est, pellentesque eget tincidunt id, interdum ac ipsum. Nulla facilisi. Suspendisse sed leo scelerisque orci sollicitudin ornare. Suspendisse convallis dui ut sodales maximus. Praesent ultricies aliquet turpis a semper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ultrices sit amet purus eget lobortis. Suspendisse ac gravida leo. Fusce placerat tortor ac tortor consectetur, at laoreet nisl dictum. Proin bibendum mollis facilisis. Duis vehicula quam volutpat laoreet mollis. Praesent quis arcu in mauris pharetra vehicula. Mauris accumsan justo at turpis maximus euismod. Nunc faucibus massa quam, non ultricies ligula consectetur id. Phasellus eget nulla vel eros luctus tempus. Aliquam eget auctor magna, sed ultricies nunc. Ut nisl neque, scelerisque eu sapien vel, tristique facilisis est. Nullam luctus sapien mi, vel condimentum odio viverra vitae. Quisque egestas tellus arcu, vel sodales dui sollicitudin in. Vestibulum non sem vitae sapien bibendum tempor. Suspendisse lacinia massa eu condimentum malesuada. Mauris id velit eu sem euismod iaculis at sed lacus. Nulla ex felis, malesuada non dapibus nec, pharetra in eros. Mauris eget tincidunt nibh. Duis eu lectus lectus. Pellentesque eros nisi, sollicitudin vitae euismod a, finibus et dolor. Etiam tincidunt erat ac tortor aliquam, a iaculis odio dignissim. Proin ultrices est nec enim ultricies, vitae blandit ante imperdiet. Vivamus sodales tempor commodo. Maecenas euismod arcu tortor, facilisis porta erat imperdiet a. Cras euismod est metus, id venenatis eros maximus non. Vestibulum viverra odio diam, id dignissim augue posuere tempus. Nam tortor diam, viverra eget consectetur eget, ornare non felis. Proin tempor nisi porttitor, dictum odio in, congue lacus. Pellentesque purus ligula, ullamcorper at rhoncus ac, laoreet at justo. Nam gravida tincidunt vestibulum. Vivamus ut justo vitae libero vulputate euismod. Proin mauris enim, sollicitudin rutrum nisl et, eleifend rutrum arcu. Suspendisse finibus id justo eu convallis. Morbi at viverra augue, quis pulvinar ipsum. Etiam ut maximus mauris. Nulla aliquam rutrum purus in pulvinar. Aenean efficitur nulla et mauris interdum, et sagittis ligula pretium. Vestibulum auctor, risus sed congue congue, ipsum ipsum sodales ipsum, quis aliquam nunc massa vitae mi. Donec turpis massa, pellentesque faucibus pellentesque a, venenatis in augue. Donec accumsan sem vel viverra laoreet. Duis ultrices augue orci, at consequat ex pellentesque in. Pellentesque nisi magna, convallis quis porttitor et, semper non nulla. Quisque a viverra arcu. Suspendisse porta massa venenatis tempor semper. Quisque id luctus erat. Mauris ut neque ac leo ornare ullamcorper sit amet at lectus. Proin pretium sollicitudin elementum. In at quam eget erat vulputate laoreet a quis risus. Aenean commodo ipsum sit amet risus hendrerit, dictum congue diam egestas. Sed venenatis sed ipsum eu varius. In convallis lectus accumsan dui auctor, eu rhoncus augue aliquam. Ut dapibus scelerisque venenatis. Nulla elit erat, lobortis in hendrerit vitae, dapibus sit amet augue. Nulla ut purus in massa iaculis tempus.-->
</resources>