<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="com.example.minimum.ui.CommentsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/comments_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/comments_title"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSecondary"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commenter_name"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_input_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_label"
            app:counterEnabled="true"
            app:counterMaxLength="200"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_gravity="end"
            app:icon="@drawable/ic_baseline_send_24"
            app:iconGravity="end"
            android:enabled="false"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager" />

        <TextView
            android:id="@+id/no_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/no_comments"
            android:textAlignment="center"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>