<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:layout_toStartOf="@+id/iconImageView"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/article_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/dummy_article_title"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_light"
                        android:textColor="?attr/colorOnSecondary"
                        android:text="@string/dummy_article_subtitle"
                        android:textSize="13sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingTop="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito"
                            android:text="@string/dummy_article_author"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito"
                            android:text="@string/dummy_article_date"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true">

                        <ImageView
                            android:id="@+id/time_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_baseline_access_time_24" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                            <TextView
                                android:id="@+id/time_to_read"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito"
                                android:text="4"
                                android:textColor="?attr/colorOnSecondary"
                                android:textSize="12sp" />
                            <TextView
                                android:id="@+id/time_to_read_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito"
                                android:text=" min read"
                                android:textColor="?attr/colorOnSecondary"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                app:srcCompat="@drawable/coffe" />
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
